# blockies-server-rs

./: .containerignore  Cargo.toml  Containerfile  LICENSE  README.md
src/: main.rs
