[package]
name = "blockies-service"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/ASMfreaK/blockies-server-rs"
license = "MIT"
keywords = ["blockies", "identity", "identicon", "png", "blocky", "rocket", "server"]
description = "Simple microservice to serve blockies-generated avatars."
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version= "0.5.0-rc.2"}
blockies = {version="0.3"}
